Fixed contrast ratio on submit button of recipe page

--- a/css/style.css
+++ b/css/style.css
@@ -591,7 +591,7 @@ nav ul {
 .rate-button {
   margin-top: 1rem;
   background-color: #bfbf7e;
-  color: white;
+  color: black;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 1rem;
